plugins {
    id 'org.springframework.boot' version '3.2.0' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
}

allprojects {
    group = 'dev.gad'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'checkstyle'
    apply plugin: 'io.spring.dependency-management'

    java {
        sourceCompatibility = '17'
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencyManagement {
        imports {
            mavenBom 'org.springframework.boot:spring-boot-dependencies:3.2.0'
        }
    }

    dependencies {
        implementation 'jakarta.validation:jakarta.validation-api'
        compileOnly 'org.projectlombok:lombok:1.18.30'
        annotationProcessor 'org.projectlombok:lombok:1.18.30'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        checkstyle 'com.puppycrawl.tools:checkstyle:10.3.1'
    }

    checkstyle {
        configFile = file("${rootDir}/scripts/checkstyle.xml")
        sourceSets = [sourceSets.main]
        toolVersion = '10.3.1'
    }

    tasks.withType(JavaCompile).configureEach {
        options.fork = true
        options.forkOptions.jvmArgs += ['-Xmx512m', '-Dfile.encoding=UTF-8']
        options.forkOptions.jvmArgs += ['--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
        options.forkOptions.jvmArgs += ['--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED']
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }
}
